# usage-tracker

./: .gitignore  .sqlfluff  README.md  pyproject.toml  requirements.txt  vimrc
doc/: utracker.txt
rplugin/python3/: logger-plugin.py
rplugin/python3/usage_tracker/: __init__.py  corpus_json.py  db.py  logger.py  plugin.py
rplugin/python3/usage_tracker/models/: genkey.py  genkey_test.py
src/: db.py  logger.py
src/cli/: corpus_json.py  genkey_json.py  helpers.py  main.py
src/db/: queries.py
src/logger/: Logger.py  genkey_json.py  helpers.py  helpers_test.py  logger.py  main.py  test_helpers.py  types.py
src/models/: genkey.py  genkey_test.py  logger.py
src/rplugin/python3/usage_tracker/: plugin.py
src/rplugin/python3/usage_tracker/db/: queries.py
src/rplugin/python3/usage_tracker/logger/: helpers.py  helpers_test.py  logger.py
src/rplugin/python3/usage_tracker/models/: genkey.py
