[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "vim-usage-logger"
version = "0.0.1"
dependencies = [
    "pynput",
]

[tool.setuptools.packages.find]
where = ["src"] # ["."] by default
# include = ["mypackage*"]  # ["*"] by default
# exclude = ["mypackage.tests*"]  # empty by default
# namespaces = false  # true by default

[project.scripts]
vim-logger = "logger.main:main"
