[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "key-logger"
version = "0.0.1"
dependencies = ["pynput", "click", "tabulate"]

[tool.setuptools.packages.find]
where = ["src"] # ["."] by default
# include = ["mypackage*"]  # ["*"] by default
# exclude = ["mypackage.tests*"]  # empty by default
# namespaces = false  # true by default

[project.scripts]
key-logger = "logger.main:cli"

[tool.pyright]
venv = ".venv"
venvPath = "."
