[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "klgr"
version = "0.0.2"
dependencies = ["pynput", "click", "tabulate"]

[tool.setuptools.packages.find]
where = ["src"] # ["."] by default
# include = ["mypackage*"]  # ["*"] by default
# exclude = ["mypackage.tests*"]  # empty by default
# namespaces = false  # true by default

[project.scripts]
klgr = "cli.main:cli"

[tool.pyright]
venv = ".cli_venv"
venvPath = "."
strict = ["/src/**/*"]
